@@ -3,7 +3,7 @@
  *
  * (c) 2001,2002 Sergei Barbarash <sgt@livejournal.com>
  *
- * $Id: network.h,v 1.2 2002/01/06 13:45:08 sgt Exp $
+ * $Id: network.h,v 1.3 2002/01/06 15:48:00 sgt Exp $
  */
 
 #ifndef WMLJ_NETWORK_H
@@ -13,5 +13,6 @@
 #include "wmlj.h"
 
 extern gboolean check_friends();
+extern gboolean lj_login();
 
 #endif /* WMLJ_NETWORK_H */
