@@ -1,5 +1,8 @@
 2002-01-06  Sergei Barbarash  <sgt@fep.ru>
 
+	* added valid LJ login, not much is used yet
+	* added fastserver support
+	* replaced plaintext password with md5 hash
 	* changed the copyright notice :) the second year of development!
 	* save the rc file after every settings change
 	* if no .wmljrc found, pops up the settings dialog immediately
